# testing-llm-automation-engine

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  DOCKER.md  Dockerfile  ENV_VARIABLES.md  README.md  eslint.config.cjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: ci.yml
benchmarks/: __init__.py
benchmarks/datasets/: README.md
benchmarks/generation/: __init__.py  runner.py
benchmarks/healing/: __init__.py  runner.py
benchmarks/intent_validation/: __init__.py  runner.py
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  GOVERNANCE.md  HEALING_SCENARIOS.md  README.md  ai-systems-engineering.md  backlog.md  decisions.md  docker.md  env-variables.md  governance.md  modernization-plan.md  observability-evaluation.md  progress.md  scorecard.md  technical-debt.md
improvements/: stage_1.md  stage_2.md
progress/: phase-12-documentation-modernization.md  phase-17-workbench-redesign.md
prompts/: generator.md  healer.md  manifest.json  vision.md
schemas/: __init__.py  artifacts.py  evaluation.py  generation.py  healing.py  shared.py
scripts/: ast_repair.js  setup_demo.py
src/: app.py
tests/: unit_test_ast_repair.py  unit_test_classification.py  unit_test_context.py  unit_test_evaluation.py  unit_test_explainability.py  unit_test_fixer.py  unit_test_healing.py  unit_test_information_architecture.py  unit_test_json.py  unit_test_llm.py  unit_test_observability.py  unit_test_provenance.py  unit_test_schemas.py  unit_test_validation.py  unit_test_visibility.py  unit_test_workbench_eval.py
(+86 files in other folders)
