[project]
name = "testing-llm-automation-engine"
version = "1.0.0"
description = "A modular, LLM-powered QA automation agent that generates and maintains Playwright tests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.57.0",
    "gradio==6.2.0",
    "openai==2.14.0",
    "beautifulsoup4==4.14.3",
    "python-dotenv==1.2.1",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]

[tool.ruff]
# Target Python version
target-version = "py311"

# Line length compatible with Black
line-length = 88

# Exclude list
exclude = [
    ".git",
    ".venv",
    "_build",
    "build",
    "dist",
    "tests/artifacts",
]

[tool.ruff.lint]
# Enable Pyflakes (F) and pycodestyle (E, W) codes, plus Isort (I).
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["unit_test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
